--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
+openmeteo-requests = "^1.3.0"
+requests-cache = "^1.2.1"
+retry-requests = "^2.0.0"
+numpy = "^2.1.1"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.11.2"
