--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ numpy = "^2.1.1"
 pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
 mypy = "^1.11.2"
 autopep8 = "^2.3.1"
 flake8 = "^7.1.1"
@@ -66,6 +67,24 @@ exclude = [
 ]
 max-line-length = 79
 max-complexity = 8
+
+[tool.black]
+line-length = 79
+target-version = ['py311']
+skip-string-normalization = true
+exclude = [
+    ".gitignore",
+    ".git",
+    "__pycache__",
+    ".venv",
+    ".mypy_cache",
+    ".pytest_cache",
+    ".idea",
+    ".ipynb_checkpoints",
+    ".github",
+    "src/migrations/",
+]
+
 
 [tool.mypy]
 python_version = "^3.11"
