--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = {extras = ["standard"], version = "^0.115.0"}
+fastapi = { extras = ["standard"], version = "^0.115.0" }
 openmeteo-requests = "^1.3.0"
 requests-cache = "^1.2.1"
 retry-requests = "^2.0.0"
@@ -46,11 +46,11 @@ flake8-string-format = "^0.3.0"
 flake8-variables-names = "^0.0.5"
 pep8-naming = "^0.14.1"
 flake8-pyproject = "^1.2.3"
-pytest-asyncio = "^0.24.0"
 
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
 
 [tool.flake8]
 exclude = [
@@ -66,7 +66,8 @@ exclude = [
     "src/migrations/",
 ]
 max-line-length = 79
-max-complexity = 8
+max-complexity = 10
+ignore = ["A003", "E402"]
 
 [tool.black]
 line-length = 79
@@ -107,4 +108,7 @@ exclude = [
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-asyncio_default_fixture_loop_scope = "function"
+asyncio_default_fixture_loop_scope = "package"
+pythonpath = [
+    ".", "src", "tests", "src/core",
+]
