--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ requests-cache = "^1.2.1"
 retry-requests = "^2.0.0"
 numpy = "^2.1.1"
 pandas = "^2.2.3"
+types-PyYAML = "^6.0.12"
+types-requests = "^2.32"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
@@ -88,7 +90,7 @@ exclude = [
 
 
 [tool.mypy]
-python_version = "^3.11"
+python_version = "3.11"
 disallow_untyped_defs = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
