--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = { extras = ["standard"], version = "^0.115.0" }
 openmeteo-requests = "^1.3.0"
 requests-cache = "^1.2.1"
 retry-requests = "^2.0.0"
@@ -21,6 +20,10 @@ numpy = "^2.1.1"
 pandas = "^2.2.3"
 types-PyYAML = "^6.0.12"
 types-requests = "^2.32"
+python-dotenv = "^1.0.0"
+requests = "^2.31.0"
+pydantic = "^1.10.7"
+pyyaml = "^6.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
