--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,7 @@
 name: Code check PEP8 naming conventions, plugin for flake8
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main, dev, master ]
   pull_request:
