--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches: [ main, dev, master ]
 
+env:
+  TELEGRAM_BOT_TOKEN: ...
+  TELEGRAM_MSG_RECEIVER: ...
+
+
 jobs:
   build:
     runs-on: ubuntu-22.04
