--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,8 @@
 name: Code check PEP8 naming conventions, plugin for flake8
 
 on:
+  schedule:
+    - cron: '* * * * *'
   workflow_dispatch:
   push:
     branches: [ main, dev, master ]
